Why A Black Background In Chat , means please use https://files.catbox.m

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,7 +92,7 @@ body {
 }
 
 .chat-bg {
-    background-image: url('https://files.catbox.moe/u394q2.jpg');
+    background-image: url('https://files.catbox.moe/rignzh.jpg');
     background-size: cover;
     background-position: center;
 }
