--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+body.bg-default {
+  background-image: url('https://files.catbox.moe/dri57s.jpg');
+}
+
+body.bg-legacy {
+  background-image: url('https://files.catbox.moe/0824jj.jpg');
+}
+
+body.bg-none {
+  background-image: none;
+  background-color: hsl(var(--background));
+}
+
 body {
   font-family: var(--font-body), Arial, Helvetica, sans-serif;
-  background-image: url('https://files.catbox.moe/0824jj.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
